@@ -1,4 +1,4 @@
-$Id: ChangeLog,v 1.28 2007-08-08 12:50:08 cmatsuoka Exp $
+$Id: ChangeLog,v 1.29 2007-08-09 00:00:16 cmatsuoka Exp $
 
 Stable versions
 ---------------
@@ -8,6 +8,7 @@ Stable versions
 	- added CD61 Octalyser module support
 	- added Flextrax FLX module detection
 	- added Real Tracker module loader
+	- added TCB Tracker module loader
 	- added portable, 64bit safe MMD0/1/2/3 MED loader
 	- enabled WAV writer
 	- removed broken shared lib generation
